--- a/index.html
+++ b/index.html
@@ -4,4 +4,6 @@
 <p><a href="html/dmod.frame.html">dmod.frame.html</a></p>
 <p><a href="html/event_estimation.html">event_estimation.html</a></p>
 <p><a href="html/getFunctions.html">getFunctions.html</a></p>
+<p><a href="html/getSymbols.html">getSymbols.html</a></p>
 <p><a href="html/lists.html">lists.html</a></p>
+<p><a href="html/solvers.html">solvers.html</a></p>
