--- a/index.html
+++ b/index.html
@@ -7,3 +7,4 @@
 <p><a href="html/getSymbols.html">getSymbols.html</a></p>
 <p><a href="html/lists.html">lists.html</a></p>
 <p><a href="html/solvers.html">solvers.html</a></p>
+<p><a href="html/symmtetryDetection.html">symmtetryDetection.html</a></p>
