--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <p><a href="html/getFunctions.html">getFunctions.html</a></p>
 <p><a href="html/getSymbols.html">getSymbols.html</a></p>
 <p><a href="html/lists.html">lists.html</a></p>
+<p><a href="html/Optimization_functions_in_dMod.html">Optimization_functions_in_dMod.html</a></p>
+<p><a href="html/Pimpl_Pexpl.html">Pimpl_Pexpl.html</a></p>
 <p><a href="html/solvers.html">solvers.html</a></p>
 <p><a href="html/steadyStates.html">steadyStates.html</a></p>
 <p><a href="html/symmtetryDetection.html">symmtetryDetection.html</a></p>
