--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <p><a href="html/lists.html">lists.html</a></p>
 <p><a href="html/Optimization_functions_in_dMod.html">Optimization_functions_in_dMod.html</a></p>
 <p><a href="html/Pimpl_Pexpl.html">Pimpl_Pexpl.html</a></p>
+<p><a href="html/plotValues_plotPars.html">plotValues_plotPars.html</a></p>
 <p><a href="html/profiles.html">profiles.html</a></p>
 <p><a href="html/solvers.html">solvers.html</a></p>
