--- a/index.html
+++ b/index.html
@@ -11,3 +11,5 @@
 <p><a href="html/plotValues_plotPars.html">plotValues_plotPars.html</a></p>
 <p><a href="html/profiles.html">profiles.html</a></p>
 <p><a href="html/solvers.html">solvers.html</a></p>
+<p><a href="html/steadyStates.html">steadyStates.html</a></p>
+<p><a href="html/symmtetryDetection.html">symmtetryDetection.html</a></p>
