--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <p><a href="html/Pimpl_Pexpl.html">Pimpl_Pexpl.html</a></p>
 <p><a href="html/plotValues_plotPars.html">plotValues_plotPars.html</a></p>
 <p><a href="html/profiles.html">profiles.html</a></p>
+<p><a href="html/runbg.html">runbg.html</a></p>
 <p><a href="html/solvers.html">solvers.html</a></p>
 <p><a href="html/steadyStates.html">steadyStates.html</a></p>
 <p><a href="html/symmtetryDetection.html">symmtetryDetection.html</a></p>
