--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <p><a href="html/defineinsertbranch.html">defineinsertbranch.html</a></p>
 <p><a href="html/dmod.frame.html">dmod.frame.html</a></p>
 <p><a href="html/event_estimation.html">event_estimation.html</a></p>
+<p><a href="html/forcings.html">forcings.html</a></p>
 <p><a href="html/getFunctions.html">getFunctions.html</a></p>
 <p><a href="html/getSymbols.html">getSymbols.html</a></p>
 <p><a href="html/lists.html">lists.html</a></p>
@@ -11,6 +12,7 @@
 <p><a href="html/plotValues_plotPars.html">plotValues_plotPars.html</a></p>
 <p><a href="html/profiles.html">profiles.html</a></p>
 <p><a href="html/runbg.html">runbg.html</a></p>
+<p><a href="html/shinyapp.html">shinyapp.html</a></p>
 <p><a href="html/solvers.html">solvers.html</a></p>
 <p><a href="html/steadyStates.html">steadyStates.html</a></p>
 <p><a href="html/symmtetryDetection.html">symmtetryDetection.html</a></p>
