--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <p><a href="html/bloq.html">bloq.html</a></p>
+<p><a href="html/compile.html">compile.html</a></p>
 <p><a href="html/concatenation.html">concatenation.html</a></p>
 <p><a href="html/defineinsertbranch.html">defineinsertbranch.html</a></p>
 <p><a href="html/dmod.frame.html">dmod.frame.html</a></p>
@@ -7,6 +8,7 @@
 <p><a href="html/getFunctions.html">getFunctions.html</a></p>
 <p><a href="html/getSymbols.html">getSymbols.html</a></p>
 <p><a href="html/lists.html">lists.html</a></p>
+<p><a href="html/msParframe.html">msParframe.html</a></p>
 <p><a href="html/Optimization_functions_in_dMod.html">Optimization_functions_in_dMod.html</a></p>
 <p><a href="html/Pimpl_Pexpl.html">Pimpl_Pexpl.html</a></p>
 <p><a href="html/plotValues_plotPars.html">plotValues_plotPars.html</a></p>
